--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
+    "page": "^1.7.1",
     "pg": "^6.1.5"
   }
 }
