--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-request-proxy": "^2.0.0",
     "fs": "0.0.1-security",
     "page": "^1.7.1",
     "pg": "^6.1.5"
